cabal-version:      3.0
name:               Day12
version:            0.1.0.0
license:            NONE
author:             Ashton Ohms
build-type:         Simple

common warnings
    ghc-options: -Wall

executable Day12
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
                    , parsec
                    , containers
                    , matrix
    hs-source-dirs:   .
    default-language: Haskell2010
